[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/ui/player_hud/player_hud.gd" type="Script" id=1]
[ext_resource path="res://raw_assets/images_icons/guns/gun_icon_rifle.png" type="Texture" id=2]
[ext_resource path="res://src/ui/in_game_overlay.theme" type="Theme" id=4]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ReloadLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.807843, 0.0627451, 0.0627451, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "reload_warning"
length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("ReloadLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.807843, 0.0627451, 0.0627451, 1 ), Color( 0.807843, 0.0627451, 0.0627451, 0.0941176 ), Color( 0.807843, 0.0627451, 0.0627451, 1 ) ]
}

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -1670.0
margin_bottom = -870.0
mouse_filter = 2
theme = ExtResource( 4 )
script = ExtResource( 1 )

[node name="WeaponInfo" type="Panel" parent="."]
margin_left = 20.0
margin_top = 70.0
margin_right = -0.448914
margin_bottom = 4.0188
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="WeaponInfo"]
__meta__ = {
"_edit_use_anchors_": true
}

[node name="LabelAmmo" type="Label" parent="WeaponInfo/VBoxContainer"]
margin_right = 256.0
margin_bottom = 33.0
size_flags_vertical = 7
text = "## / INF"
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="WeaponInfo/VBoxContainer"]
margin_top = 37.0
margin_right = 256.0
margin_bottom = 41.0

[node name="WeaponIcon" type="TextureRect" parent="WeaponInfo/VBoxContainer"]
margin_top = 45.0
margin_right = 256.0
margin_bottom = 109.0
size_flags_horizontal = 12
size_flags_vertical = 3
texture = ExtResource( 2 )

[node name="ReloadLabel" type="Label" parent="."]
modulate = Color( 0.807843, 0.0627451, 0.0627451, 1 )
margin_left = 75.0
margin_top = 6.10352e-05
theme_type_variation = "Header3"
text = "Reload"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/reload_warning = SubResource( 2 )
